# olive-divergence

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: FindMuParser.cmake
dialogs/: aboutdialog.cpp  aboutdialog.h  actionsearch.cpp  actionsearch.h  advancedvideodialog.cpp  advancedvideodialog.h  autocutsilencedialog.cpp  autocutsilencedialog.h  debugdialog.cpp  debugdialog.h  demonotice.cpp  demonotice.h  exportdialog.cpp  exportdialog.h  loaddialog.cpp  loaddialog.h  mediapropertiesdialog.cpp  mediapropertiesdialog.h  newsequencedialog.cpp  newsequencedialog.h  preferencesdialog.cpp  preferencesdialog.h  proxydialog.cpp  proxydialog.h  replaceclipmediadialog.cpp  replaceclipmediadialog.h  speeddialog.cpp  speeddialog.h  texteditdialog.cpp  texteditdialog.h
effects/: effect.cpp  effect.h  effectfield.cpp  effectfield.h  effectgizmo.cpp  effectgizmo.h  effectloaders.cpp  effectloaders.h  effectrow.cpp  effectrow.h  keyframe.cpp  keyframe.h  transition.cpp  transition.h
effects/internal/: audionoiseeffect.h  blending.frag  cornerpineffect.cpp  cornerpineffect.h  crossdissolvetransition.cpp  crossdissolvetransition.h  cubetransition.h  exponentialfadetransition.cpp  exponentialfadetransition.h  fillleftrighteffect.cpp  fillleftrighteffect.h  frei0reffect.cpp  frei0reffect.h  linearfadetransition.cpp  linearfadetransition.h  logarithmicfadetransition.cpp  logarithmicfadetransition.h  paneffect.cpp  paneffect.h  richtexteffect.cpp  richtexteffect.h  shakeeffect.cpp  shakeeffect.h  solideffect.cpp  solideffect.h  texteffect.cpp  texteffect.h  timecodeeffect.cpp  timecodeeffect.h  toneeffect.cpp  toneeffect.h  transformeffect.cpp  transformeffect.h  voideffect.cpp  voideffect.h  volumeeffect.cpp  volumeeffect.h  vsthost.cpp  vsthost.h
effects/shaders/Community/bokehBlur/: bokehBlur.frag
effects/shaders/Community/denoise/: denoise.frag
effects/shaders/Community/kaleidoscope/: kaleidoscope.frag
effects/shaders/Community/radialWipe/: radialwipe.frag  radialwipe.xml
effects/shaders/Default/COMMON/: common.frag
effects/shaders/FaranEffect/: debug.frag  debug.xml  diamond.frag  squared.frag  tonalchange.xml
effects/shaders/effects/Default/: crop.frag
effects/shaders/effects/Default/COMMON/: common.vert
effects/shaders/effects/FaranEffect/: pishift.frag  tonalchange.frag
effects/shaders/effects/kShader/kBloom/: kBloom.xml
effects/shaders/effects/kShader/kBokeh/: kBokeh.frag
effects/shaders/effects/kShader/kCircBlur/: kCircBlur.frag
effects/shaders/effects/kShader/kEdgeGlow/: kEdgeGlow.frag
effects/shaders/effects/kShader/kFade/: kFade.frag
effects/shaders/effects/kShader/kFilmLook/: kFilmLook.xml
effects/shaders/effects/kShader/kFrostedGlass/: kFrostedGlass.frag
effects/shaders/effects/kShader/kGlitch/: kGlitch.frag
effects/shaders/effects/kShader/kHeat/: kHeat.xml
effects/shaders/effects/kShader/kInstaGrade/: kInstaGrade.xml
effects/shaders/effects/kShader/kRotate/: kRotate.frag
effects/shaders/effects/kShader/kWobble/: kWobble.xml
effects/shaders/kShader/kBloom/: kBloom.frag
effects/shaders/kShader/kBokeh/: kBokeh.xml
effects/shaders/kShader/kEdgeGlow/: kEdgeGlow.xml
effects/shaders/kShader/kFilmLook/: kFilmLook.frag
effects/shaders/kShader/kFrostedGlass/: kFrostedGlass.xml
effects/shaders/kShader/kGlitch/: kGlitch.xml
effects/shaders/kShader/kGrade/: kInstaGrade.frag
effects/shaders/kShader/kInstaGrade/: kInstaGrade.frag
effects/shaders/kShader/kInstagram/: kInstagram.frag
effects/shaders/kShader/kScreenShake/: kScreenShake.frag
global/: config.cpp  config.h  debug.cpp  debug.h  global.cpp  global.h  math.cpp  math.h  path.cpp  path.h
include/: muparser.cpp  muparser.h
packaging/linux/: org.olivevideoeditor.Olive.appdata.xml  org.olivevideoeditor.Olive.desktop
panels/: effectcontrols.cpp  effectcontrols.h  grapheditor.cpp  grapheditor.h  panels.cpp  panels.h  project.cpp  project.h  timeline.cpp  timeline.h  viewer.cpp  viewer.h
project/: clipboard.cpp  clipboard.h  footage.cpp  footage.h  loadthread.cpp  loadthread.h  media.cpp  media.h  previewgenerator.cpp  previewgenerator.h  projectelements.h  projectfilter.cpp  projectfilter.h  projectmodel.cpp  projectmodel.h  proxygenerator.cpp  proxygenerator.h  sourcescommon.cpp  sourcescommon.h
rendering/: audio.cpp  audio.h  cacher.cpp  cacher.h  clipqueue.cpp  clipqueue.h  exportthread.cpp  exportthread.h  renderfunctions.cpp  renderfunctions.h  renderthread.cpp  renderthread.h
timeline/: clip.cpp  clip.h  marker.cpp  marker.h  selection.h  sequence.cpp  sequence.h  timeline.h
ts/: olive_id.ts
ui/: audiomonitor.cpp  audiomonitor.h  clickablelabel.cpp  clickablelabel.h  collapsiblewidget.cpp  collapsiblewidget.h  colorbutton.cpp  colorbutton.h  comboboxex.cpp  comboboxex.h  cursors.cpp  cursors.h  embeddedfilechooser.cpp  embeddedfilechooser.h  focusfilter.cpp  focusfilter.h  fontcombobox.cpp  fontcombobox.h  graphview.cpp  graphview.h  keyframedrawing.cpp  keyframedrawing.h  keyframenavigator.cpp  keyframenavigator.h  keyframeview.cpp  keyframeview.h  labelslider.cpp  labelslider.h  mainwindow.cpp  mainwindow.h  mediaiconservice.cpp  mediaiconservice.h  menuhelper.cpp  menuhelper.h  panel.cpp  panel.h  rectangleselect.cpp  rectangleselect.h  resizablescrollbar.cpp  resizablescrollbar.h  (+19 more)
undo/: undo.cpp  undo.h
